# home-security

./: CHANGELOG.md  configure.ac
.github/: CODEOWNERS
.github/workflows/: native-build.yml
cov_docker_script/: component_config.json  configure_options.conf
docs/: README.md
source/: Makefile.am  ccsp_message_bus_client_tool.c
source/Ssp/: CcspHomeSecurity  Makefile.am  hdk.c  hdk_ccsp_mbus.c  hdk_context.c  hdk_data.c  hdk_device.c  hnapd.c
source/test/: CcspHomeSecurityMock.cpp  CcspHomeSecurityMock.h  Makefile.am  hdk_adi_test.cpp  hdk_context_test.cpp  hdk_device_GetValue_test.cpp  hdk_device_test.cpp  hdk_encode_test.cpp  hdk_test.cpp  hnapd_test.cpp  run_ut.sh
source/test/mocks/: mock_hdk_ccsp_mbus.cpp  mock_hdk_ccsp_mbus.h
